[gd_scene load_steps=20 format=2]

[ext_resource path="res://LocalMultiplayer/CaptureTheFlag.gd" type="Script" id=1]
[ext_resource path="res://SpaceMap.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objects/Flag.tscn" type="PackedScene" id=3]
[ext_resource path="res://Weapons/AvailableWeapon.tscn" type="PackedScene" id=4]
[ext_resource path="res://Weapons/LaserCannon.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/weapons/laserCannon.png" type="Texture" id=6]
[ext_resource path="res://Weapons/MachineGun.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/weapons/machinegun.png" type="Texture" id=8]
[ext_resource path="res://Weapons/Sniper.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/weapons/sniper.png" type="Texture" id=10]
[ext_resource path="res://Weapons/Minigun.tscn" type="PackedScene" id=11]
[ext_resource path="res://Assets/weapons/Minigun/minigun1.png" type="Texture" id=12]
[ext_resource path="res://LocalMultiplayer/MultiplayerCamera.gd" type="Script" id=13]
[ext_resource path="res://LocalMultiplayer/HUD.tscn" type="PackedScene" id=14]
[ext_resource path="res://UI/WeaponSlots.tscn" type="PackedScene" id=15]
[ext_resource path="res://Assets/fite_me_irl_b.ogg" type="AudioStream" id=16]
[ext_resource path="res://Objects/Base.tscn" type="PackedScene" id=17]
[ext_resource path="res://Objects/PickupSpawn.tscn" type="PackedScene" id=18]
[ext_resource path="res://Objects/Orb.tscn" type="PackedScene" id=19]

[node name="MultiplayerMap" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Map" parent="." index="0" instance=ExtResource( 2 )]

[node name="Flag1" parent="." index="1" instance=ExtResource( 3 )]

position = Vector2( 140, 270 )
_sections_unfolded = [ "Collision", "Transform" ]
team = 1
colour = "blue"

[node name="Flag2" parent="." index="2" instance=ExtResource( 3 )]

position = Vector2( 1790, 270 )
_sections_unfolded = [ "Collision", "Transform" ]
team = 2
colour = "red"

[node name="Pickups" type="Node" parent="." index="3"]

editor/display_folded = true

[node name="LaserCannon" parent="Pickups" index="0" instance=ExtResource( 4 )]

scene = ExtResource( 5 )
texture = ExtResource( 6 )

[node name="MachineGun" parent="Pickups" index="1" instance=ExtResource( 4 )]

scene = ExtResource( 7 )
texture = ExtResource( 8 )

[node name="Sniper" parent="Pickups" index="2" instance=ExtResource( 4 )]

scene = ExtResource( 9 )
texture = ExtResource( 10 )

[node name="Minigun" parent="Pickups" index="3" instance=ExtResource( 4 )]

scene = ExtResource( 11 )
texture = ExtResource( 12 )

[node name="Bullets" type="Node" parent="." index="4"]

[node name="Camera" type="Camera2D" parent="." index="5"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = false
drag_margin_v_enabled = false
smoothing_enabled = true
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
script = ExtResource( 13 )
_sections_unfolded = [ "Smoothing" ]
follow_paths = [  ]

[node name="SpawnPoints" type="Node" parent="." index="6"]

[node name="Spawn1" type="Position2D" parent="SpawnPoints" index="0"]

position = Vector2( 220, 1040 )

[node name="Spawn2" type="Position2D" parent="SpawnPoints" index="1"]

position = Vector2( 1690, 1050 )

[node name="P1SpawnTimer" type="Timer" parent="." index="7"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="P2SpawnTimer" type="Timer" parent="." index="8"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="Players" type="Node" parent="." index="9"]

[node name="HUD" parent="." index="10" instance=ExtResource( 14 )]

_sections_unfolded = [ "Pause" ]

[node name="P1WeaponSlots" parent="HUD" index="3" instance=ExtResource( 15 )]

anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 0.0
margin_top = -355.0
margin_right = 260.0
margin_bottom = 355.0

[node name="P2WeaponSlots" parent="HUD" index="4" instance=ExtResource( 15 )]

anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 0.0
margin_top = -355.0
margin_right = 260.0
margin_bottom = 355.0
rect_scale = Vector2( -1, 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="11"]

stream = ExtResource( 16 )
volume_db = 0.0
autoplay = true
mix_target = 0
bus = "Master"
_sections_unfolded = [ "Pause" ]

[node name="Base" parent="." index="12" instance=ExtResource( 17 )]

position = Vector2( 150, 1070 )
team = 1
colour = "blue"

[node name="Base2" parent="." index="13" instance=ExtResource( 17 )]

position = Vector2( 1760, 1070 )
team = 2

[node name="PickupSpawn" parent="." index="14" instance=ExtResource( 18 )]

position = Vector2( 510, 960 )
available_pickups_path = NodePath("../Pickups")

[node name="PickupSpawn2" parent="." index="15" instance=ExtResource( 18 )]

position = Vector2( 1410, 960 )
available_pickups_path = NodePath("../Pickups")

[node name="PickupSpawn3" parent="." index="16" instance=ExtResource( 18 )]

position = Vector2( 960, 320 )
available_pickups_path = NodePath("../Pickups")

[node name="Orb" parent="." index="17" instance=ExtResource( 19 )]

position = Vector2( 960, 70 )

[node name="ResetTimer" type="Timer" parent="." index="18"]

process_mode = 1
wait_time = 10.0
one_shot = true
autostart = false

[connection signal="timeout" from="P1SpawnTimer" to="." method="_on_P1SpawnTimer_timeout"]

[connection signal="timeout" from="P2SpawnTimer" to="." method="_on_P2SpawnTimer_timeout"]

[connection signal="flag_returned_1" from="Base" to="." method="_on_Base_flag_returned_1"]

[connection signal="flag_returned_2" from="Base" to="." method="_on_Base_flag_returned_2"]

[connection signal="flag_returned_1" from="Base2" to="." method="_on_Base2_flag_returned_1"]

[connection signal="flag_returned_2" from="Base2" to="." method="_on_Base2_flag_returned_2"]

[connection signal="orbDestroyed" from="Orb" to="." method="_on_Orb_orbDestroyed"]

[connection signal="timeout" from="ResetTimer" to="." method="_on_ResetTimer_timeout"]


